# rpi-scratch

./: CMakeLists.txt  README.md
src/: gst-asend.c  gst-webcam.c
